# sports-prediction-markets

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: kalshi_market_mappings.yaml  settings.dev.yaml  settings.yaml  team_aliases.yaml
dags/: edge_detection_dag.py  kalshi_markets_dag.py  maintenance_dag.py  sports_data_dag.py
docs/: architecture.md  backtesting.md  configuration.md  development.md  models.md  realtime.md
scripts/: backfill.py  backtest.py  download_becker.py  init_duckdb.py  run_becker_backtest.py  run_realtime.py  scan_edges.py
src/sports_pipeline/: config.py  constants.py
src/sports_pipeline/analytics/: base.py  calibration.py  elo.py  ensemble.py  logistic.py  pace_adjusted.py  player_props.py  poisson.py
src/sports_pipeline/backtesting/: calibration.py  metrics.py  replayer.py  reports.py  simulator.py
src/sports_pipeline/edge_detection/: alerts.py  detector.py  filters.py  kelly.py
src/sports_pipeline/extractors/: base.py
src/sports_pipeline/loaders/: becker_views.py  duckdb_loader.py  gold_builder.py  views.py
src/sports_pipeline/quality/: checks.py  reports.py
src/sports_pipeline/realtime/: __init__.py  app.py  config.py  discovery.py  events.py  model_loader.py
src/sports_pipeline/storage/: parquet_store.py  paths.py
src/sports_pipeline/transformers/: base.py
src/sports_pipeline/utils/: logging.py  rate_limiter.py  retry.py
tests/: conftest.py
tests/unit/analytics/: test_models.py
tests/unit/backtesting/: test_calibration.py  test_replayer.py
tests/unit/edge_detection/: test_detector.py
tests/unit/extractors/: test_kalshi_extractor.py  test_nba_extractors.py
(+82 files in other folders)
